Figuring out how to separate desired fields

--- a/Dataframe.ipynb
+++ b/Dataframe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "about-civilization",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "brutal-symphony",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "animated-sally",
    "metadata": {},
    "outputs": [
@@ -2085,7 +2085,7 @@
        "</iframe></html>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25854,7 +25854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "exclusive-importance",
    "metadata": {},
    "outputs": [
@@ -25864,7 +25864,7 @@
        "'Freddy Funko'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25875,7 +25875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "id": "latest-being",
    "metadata": {},
    "outputs": [
@@ -25885,7 +25885,7 @@
        "'Alternative Name: 12th Man Freddy Funko'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25897,7 +25897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "expected-commercial",
    "metadata": {},
    "outputs": [
@@ -25907,7 +25907,7 @@
        "'$310.00'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25918,8 +25918,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "fleet-study",
+   "execution_count": 14,
+   "id": "pleasant-retro",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<td class=\"days ng-binding\">\n",
+       "                     30 days\n",
+       "                   </td>,\n",
+       " <td class=\"days ng-binding\">\n",
+       "                     90 days\n",
+       "                   </td>,\n",
+       " <td class=\"days ng-binding\">\n",
+       "                     180 days\n",
+       "                   </td>,\n",
+       " <td class=\"days ng-binding\">\n",
+       "                     1 year\n",
+       "                   </td>]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batchsoup.find_all('td',class_=\"days ng-binding\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "opened-pressure",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<td class=\"ng-binding\">$315.00</td>,\n",
+       " <td class=\"ng-binding\">$315.00</td>,\n",
+       " <td class=\"ng-binding\">$315.00</td>,\n",
+       " <td class=\"ng-binding\">$315.00</td>,\n",
+       " <td class=\"ng-binding\">$300.00</td>,\n",
+       " <td class=\"ng-binding\">$300.00</td>,\n",
+       " <td class=\"ng-binding\">$300.00</td>,\n",
+       " <td class=\"ng-binding\">$300.00</td>,\n",
+       " <td class=\"ng-binding\">$287.90</td>,\n",
+       " <td class=\"ng-binding\">$204.50</td>,\n",
+       " <td class=\"ng-binding\">$255.00</td>,\n",
+       " <td class=\"ng-binding\">$399.99</td>,\n",
+       " <td class=\"ng-binding\">$314.14</td>,\n",
+       " <td class=\"ng-binding\">$289.99</td>,\n",
+       " <td class=\"ng-binding\">$325.00</td>,\n",
+       " <td class=\"ng-binding\">$325.00</td>]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Avg, low, median, high\n",
+    "#Is it better to iterate straight through or by 4\n",
+    "batchsoup.find_all(lambda tag: tag.name == 'td' and tag.get('class') == ['ng-binding'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "moderate-banks",
    "metadata": {},
    "outputs": [
     {
@@ -25967,106 +26037,80 @@
        " <td class=\"ng-binding\">$325.00</td>]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "batchsoup.find_all('td')"
+    "batchsoup.find_all('td',class_=\"ng-binding\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "id": "subsequent-gates",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[<div class=\"ng-binding ng-scope\" ng-if=\"string.length &lt;= max\">\n",
-       "   FUNKO POP FREDDY FUNKO 12th Man Eccc 2016 Only 250 Made\n",
-       " </div>,\n",
-       " <div class=\"ng-binding ng-scope\" ng-if=\"string.length &lt;= max\">\n",
-       "   Funko Pop Freddy Funko 12th Man Football ECCC 2016 Limited 250pcs Pop Stack\n",
-       " </div>,\n",
-       " <div class=\"ng-binding ng-scope\" ng-if=\"string.length &lt;= max\">\n",
-       "   Pop! Funko: 12th Man Freddy Funko - 2016 ECCC 250 pcs\n",
-       " </div>,\n",
-       " <div class=\"ng-binding ng-scope\" ng-if=\"string.length &lt;= max\">\n",
-       "   Funko Pop Freddy Funko 12th Man Football ECCC 2016 Limited 250pcs Pop Stack\n",
-       " </div>,\n",
-       " <div class=\"ng-binding ng-scope\" ng-if=\"string.length &lt;= max\">\n",
-       "   Funko Pop Freddy Funko 12th Man Football ECCC 2016 Limited 250pcs Pop Stack\n",
-       " </div>,\n",
-       " <div class=\"ng-binding ng-scope\" ng-if=\"string.length &lt;= max\">\n",
-       "   Funko\n",
-       " </div>,\n",
-       " <div class=\"ng-binding ng-scope\" ng-if=\"string.length &lt;= max\">\n",
-       "   Freddy Funko\n",
-       " </div>,\n",
-       " <div class=\"ng-binding ng-scope\" ng-if=\"string.length &lt;= max\">\n",
-       "   Pop! Vinyl\n",
-       " </div>,\n",
-       " <div class=\"ng-binding ng-scope\" ng-if=\"string.length &lt;= max\">\n",
-       "   Pop! Funko\n",
-       " </div>,\n",
-       " <div class=\"ng-binding ng-scope\" ng-if=\"string.length &lt;= max\">\n",
-       "   Emerald City Comic Con\n",
-       " </div>,\n",
-       " <div class=\"ng-binding ng-scope\" ng-if=\"string.length &lt;= max\">\n",
-       "   Seattle Seahawks\n",
-       " </div>,\n",
-       " <div class=\"ng-binding ng-scope\" ng-if=\"string.length &lt;= max\">\n",
-       "   National Football League (NFL)\n",
-       " </div>]"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FUNKO POP FREDDY FUNKO 12th Man Eccc 2016 Only 250 Made\n",
+      "Funko Pop Freddy Funko 12th Man Football ECCC 2016 Limited 250pcs Pop Stack\n",
+      "Pop! Funko: 12th Man Freddy Funko - 2016 ECCC 250 pcs\n",
+      "Funko Pop Freddy Funko 12th Man Football ECCC 2016 Limited 250pcs Pop Stack\n",
+      "Funko Pop Freddy Funko 12th Man Football ECCC 2016 Limited 250pcs Pop Stack\n",
+      "Funko\n",
+      "Freddy Funko\n",
+      "Pop! Vinyl\n",
+      "Pop! Funko\n",
+      "Emerald City Comic Con\n",
+      "Seattle Seahawks\n",
+      "National Football League (NFL)\n"
+     ]
     }
    ],
    "source": [
     "#loop and create strings\n",
-    "batchsoup.find_all('div', class_='ng-binding ng-scope')"
+    "#make list\n",
+    "#everything Funko forward\n",
+    "for i in batchsoup.find_all('div', class_='ng-binding ng-scope'):\n",
+    "    print(i.string.strip())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 28,
    "id": "chief-conditioning",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[<a class=\"ng-binding\" ng-href=\"\">250</a>,\n",
-       " <a class=\"ng-binding\" ng-href=\"\">Plastic</a>,\n",
-       " <a class=\"ng-binding\" ng-href=\"\">3.75\"</a>,\n",
-       " <a class=\"ng-binding\" ng-href=\"\">Male</a>,\n",
-       " <a class=\"ng-binding\" ng-href=\"\">Silver, Dark Orange, Lime, Navy</a>,\n",
-       " <a class=\"ng-binding\" ng-href=\"\">1</a>,\n",
-       " <a class=\"ng-binding\" ng-href=\"\">Box</a>,\n",
-       " <a class=\"ng-binding\" ng-href=\"\">No</a>,\n",
-       " <a class=\"ng-binding\" ng-href=\"\">English</a>,\n",
-       " <a class=\"ng-binding\" ng-href=\"\">\n",
-       " </a>]"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "250\n",
+      "Plastic\n",
+      "3.75\"\n",
+      "Male\n",
+      "Silver, Dark Orange, Lime, Navy\n",
+      "1\n",
+      "Box\n",
+      "No\n",
+      "English\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "batchsoup.find_all('a', class_='ng-binding',href=\"\")"
+    "#account for blank at end\n",
+    "for i in batchsoup.find_all('a', class_='ng-binding',href=\"\"):\n",
+    "    print(i.string.strip())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "id": "planned-majority",
    "metadata": {},
    "outputs": [
@@ -26076,7 +26120,7 @@
        "[<b>Released:</b>, <b>Production Status: </b>]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26087,7 +26131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "id": "joined-agent",
    "metadata": {},
    "outputs": [
@@ -26122,7 +26166,7 @@
        " <b class=\"ng-binding\">Package Language:</b>]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26133,7 +26177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "id": "cooperative-hearts",
    "metadata": {},
    "outputs": [
@@ -26299,7 +26343,7 @@
        " </div>]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26311,8 +26355,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "moderate-yahoo",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#defaultdict\n",
+    "#loop through files\n",
+    "#make the soup\n",
+    "#name\n",
+    "#alternative name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "clear-alcohol",
    "metadata": {},
    "outputs": [],
    "source": []
