Put together initial df to model based on previous model columns and selected past value

--- a/TS_Cleaning.ipynb
+++ b/TS_Cleaning.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "native-burning",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "addressed-things",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
        "Name: cleaned_released, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,34 +247,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "experimental-government",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['cleaned_released'] = pd.to_datetime(df['cleaned_released'],yearfirst=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a8039f9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['year'] = df['cleaned_released'].dt.year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "20e7518e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "HTMLs/ppg_7821.txt    2019-01-01\n",
-       "HTMLs/ppg_1288.txt    2016-01-01\n",
-       "HTMLs/ppg_10517.txt   2017-01-01\n",
-       "HTMLs/ppg_2781.txt    2019-01-01\n",
-       "HTMLs/ppg_816.txt     2017-01-01\n",
-       "                         ...    \n",
-       "HTMLs/ppg_2940.txt    2018-01-01\n",
-       "HTMLs/ppg_2798.txt    2017-01-01\n",
-       "HTMLs/ppg_7838.txt    2013-01-01\n",
-       "HTMLs/ppg_1291.txt    2018-01-01\n",
-       "HTMLs/ppg_9815.txt    2019-01-01\n",
-       "Name: cleaned_released, Length: 11487, dtype: datetime64[ns]"
+       "HTMLs/ppg_7821.txt     2019.0\n",
+       "HTMLs/ppg_1288.txt     2016.0\n",
+       "HTMLs/ppg_10517.txt    2017.0\n",
+       "HTMLs/ppg_2781.txt     2019.0\n",
+       "HTMLs/ppg_816.txt      2017.0\n",
+       "Name: year, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.to_datetime(df['cleaned_released'],yearfirst=True)"
+    "df['year'].head()"
    ]
   },
   {
@@ -325,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "outdoor-anger",
    "metadata": {},
    "outputs": [],
@@ -343,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "polyphonic-guard",
    "metadata": {},
    "outputs": [
@@ -353,7 +367,7 @@
        "{'1 year': '$8.43', '2 years': '$15.66'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "id": "convinced-candle",
    "metadata": {},
    "outputs": [],
@@ -418,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "id": "crazy-valve",
    "metadata": {},
    "outputs": [
@@ -547,7 +561,7 @@
        "HTMLs/ppg_6295.txt      NaN       NaN    NaN      NaN  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "id": "conceptual-liver",
    "metadata": {},
    "outputs": [
@@ -671,7 +685,7 @@
        "freq           4       19        2  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "id": "higher-router",
    "metadata": {},
    "outputs": [],
@@ -694,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "id": "crazy-isaac",
    "metadata": {},
    "outputs": [
@@ -823,7 +837,7 @@
        "HTMLs/ppg_6295.txt      NaN       NaN    NaN      NaN  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "d8ea0ac4",
    "metadata": {},
    "outputs": [],
@@ -15231,7 +15245,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1c5f9285",
+   "id": "06335b19",
    "metadata": {},
    "outputs": [
     {
@@ -15255,7 +15269,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2ca9bd5f",
+   "id": "50bf4270",
    "metadata": {},
    "outputs": [
     {
@@ -15666,7 +15680,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "71859e98",
+   "id": "48cb6c35",
    "metadata": {},
    "outputs": [
     {
@@ -16077,7 +16091,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "efa334d1",
+   "id": "9ea9a309",
    "metadata": {},
    "outputs": [
     {
@@ -16103,7 +16117,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2d89ed38",
+   "id": "7fec8f54",
    "metadata": {},
    "outputs": [
     {
@@ -16127,7 +16141,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "43423660",
+   "id": "75fcb221",
    "metadata": {},
    "outputs": [
     {
@@ -16159,7 +16173,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b8d4970f",
+   "id": "d6506e46",
    "metadata": {},
    "outputs": [
     {
@@ -16778,6 +16792,193 @@
    "source": [
     "#released, brand_series, current_value, 180 days value, [details(start at gender for MVP, breakout color]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "efa97e40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(                    cleaned_current_value released  \\\n",
+       " HTMLs/ppg_7821.txt                  18.00     2019   \n",
+       " HTMLs/ppg_1288.txt                  14.00     2016   \n",
+       " HTMLs/ppg_10517.txt                  9.00     2017   \n",
+       " HTMLs/ppg_2781.txt                  55.00     2019   \n",
+       " HTMLs/ppg_816.txt                   11.00     2017   \n",
+       " ...                                   ...      ...   \n",
+       " HTMLs/ppg_2940.txt                  10.00     2018   \n",
+       " HTMLs/ppg_2798.txt                   9.00     2017   \n",
+       " HTMLs/ppg_7838.txt                  28.00     2013   \n",
+       " HTMLs/ppg_1291.txt                  10.00     2018   \n",
+       " HTMLs/ppg_9815.txt                   9.00     2019   \n",
+       " \n",
+       "                                                           brand_series  \n",
+       " HTMLs/ppg_7821.txt   [RICHARD PETTY AUTOGRAPHED FUNKO POP!,  NASCAR...  \n",
+       " HTMLs/ppg_1288.txt   [Game of Thrones - #39 Bronn, Funko POP! HBO's...  \n",
+       " HTMLs/ppg_10517.txt  [Wonder Woman (Hood) (Sepia), Wonder Woman (Ho...  \n",
+       " HTMLs/ppg_2781.txt   [FUNKO THE OFFICE DWIGHT POP & TEE DUNDER MIFF...  \n",
+       " HTMLs/ppg_816.txt    [Funko Pop! BB-8 & BB-9E Best Buy Exclusive, F...  \n",
+       " ...                                                                ...  \n",
+       " HTMLs/ppg_2940.txt   [Elmer Fudd (Opera) - not mint, Funko POP! Ani...  \n",
+       " HTMLs/ppg_2798.txt   [Eclipse Cultist, #259 ECLIPSE CULTIST FUNKO P...  \n",
+       " HTMLs/ppg_7838.txt   [Funko Pop TV: The Walking Dead - Rick Grimes ...  \n",
+       " HTMLs/ppg_1291.txt   [Brooklyn, Brooklyn, Funko Pop! Vinyl Disney G...  \n",
+       " HTMLs/ppg_9815.txt   [FUNKO POP MARVEL TONY STARK ENTERTAINMENT EAR...  \n",
+       " \n",
+       " [11487 rows x 3 columns],\n",
+       " HTMLs/ppg_7821.txt     18.64\n",
+       " HTMLs/ppg_1288.txt     13.80\n",
+       " HTMLs/ppg_5788.txt     62.59\n",
+       " HTMLs/ppg_10271.txt     9.39\n",
+       " HTMLs/ppg_6295.txt         0\n",
+       " Name: 180 days, dtype: object)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['cleaned_current_value','released','brand_series']],values_df['180 days'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "4855250e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_df = pd.concat([df[['cleaned_current_value','released','brand_series']],values_df['180 days']],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "c111e66d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cleaned_current_value</th>\n",
+       "      <th>released</th>\n",
+       "      <th>brand_series</th>\n",
+       "      <th>180 days</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>HTMLs/ppg_7821.txt</th>\n",
+       "      <td>18.00</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>[RICHARD PETTY AUTOGRAPHED FUNKO POP!,  NASCAR...</td>\n",
+       "      <td>18.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HTMLs/ppg_1288.txt</th>\n",
+       "      <td>14.00</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>[Game of Thrones - #39 Bronn, Funko POP! HBO's...</td>\n",
+       "      <td>13.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HTMLs/ppg_10517.txt</th>\n",
+       "      <td>9.00</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>[Wonder Woman (Hood) (Sepia), Wonder Woman (Ho...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HTMLs/ppg_2781.txt</th>\n",
+       "      <td>55.00</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>[FUNKO THE OFFICE DWIGHT POP &amp; TEE DUNDER MIFF...</td>\n",
+       "      <td>30.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HTMLs/ppg_816.txt</th>\n",
+       "      <td>11.00</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>[Funko Pop! BB-8 &amp; BB-9E Best Buy Exclusive, F...</td>\n",
+       "      <td>11.25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    cleaned_current_value released  \\\n",
+       "HTMLs/ppg_7821.txt                  18.00     2019   \n",
+       "HTMLs/ppg_1288.txt                  14.00     2016   \n",
+       "HTMLs/ppg_10517.txt                  9.00     2017   \n",
+       "HTMLs/ppg_2781.txt                  55.00     2019   \n",
+       "HTMLs/ppg_816.txt                   11.00     2017   \n",
+       "\n",
+       "                                                          brand_series  \\\n",
+       "HTMLs/ppg_7821.txt   [RICHARD PETTY AUTOGRAPHED FUNKO POP!,  NASCAR...   \n",
+       "HTMLs/ppg_1288.txt   [Game of Thrones - #39 Bronn, Funko POP! HBO's...   \n",
+       "HTMLs/ppg_10517.txt  [Wonder Woman (Hood) (Sepia), Wonder Woman (Ho...   \n",
+       "HTMLs/ppg_2781.txt   [FUNKO THE OFFICE DWIGHT POP & TEE DUNDER MIFF...   \n",
+       "HTMLs/ppg_816.txt    [Funko Pop! BB-8 & BB-9E Best Buy Exclusive, F...   \n",
+       "\n",
+       "                    180 days  \n",
+       "HTMLs/ppg_7821.txt     18.64  \n",
+       "HTMLs/ppg_1288.txt     13.80  \n",
+       "HTMLs/ppg_10517.txt        0  \n",
+       "HTMLs/ppg_2781.txt     30.00  \n",
+       "HTMLs/ppg_816.txt      11.25  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "416b201c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('model_df.pickle', 'wb') as model_df_pickle:\n",
+    "    pickle.dump(model_df, model_df_pickle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15dd66ef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
